logs/dag_id=dag1_test_production_summary/run_id=manual__2025-09-16T104157.514900+0000/task_id=create_test_production_summary/attempt=1.log
[2025-09-16T10:41:59.639+0000] {taskinstance.py:1956} INFO - Dependencies all met for dep_context=non-requeueable deps ti=<TaskInstance: dag1_test_production_summary.create_test_production_summary manual__2025-09-16T10:41:57.514900+00:00 [queued]>
[2025-09-16T10:41:59.644+0000] {taskinstance.py:1956} INFO - Dependencies all met for dep_context=requeueable deps ti=<TaskInstance: dag1_test_production_summary.create_test_production_summary manual__2025-09-16T10:41:57.514900+00:00 [queued]>
[2025-09-16T10:41:59.646+0000] {taskinstance.py:2170} INFO - Starting attempt 1 of 1
[2025-09-16T10:41:59.654+0000] {taskinstance.py:2191} INFO - Executing <Task(PythonOperator): create_test_production_summary> on 2025-09-16 10:41:57.514900+00:00
[2025-09-16T10:41:59.660+0000] {standard_task_runner.py:60} INFO - Started process 80 to run task
[2025-09-16T10:41:59.663+0000] {standard_task_runner.py:87} INFO - Running: ['***', 'tasks', 'run', 'dag1_test_production_summary', 'create_test_production_summary', 'manual__2025-09-16T10:41:57.514900+00:00', '--job-id', '4', '--raw', '--subdir', 'DAGS_FOLDER/sql_flow.py', '--cfg-path', '/tmp/tmp35mvhsm8']
[2025-09-16T10:41:59.665+0000] {standard_task_runner.py:88} INFO - Job 4: Subtask create_test_production_summary
[2025-09-16T10:41:59.702+0000] {task_command.py:423} INFO - Running <TaskInstance: dag1_test_production_summary.create_test_production_summary manual__2025-09-16T10:41:57.514900+00:00 [running]> on host 9bf7a2eb3ae2
[2025-09-16T10:41:59.749+0000] {taskinstance.py:2480} INFO - Exporting env vars: AIRFLOW_CTX_DAG_OWNER='***' AIRFLOW_CTX_DAG_ID='dag1_test_production_summary' AIRFLOW_CTX_TASK_ID='create_test_production_summary' AIRFLOW_CTX_EXECUTION_DATE='2025-09-16T10:41:57.514900+00:00' AIRFLOW_CTX_TRY_NUMBER='1' AIRFLOW_CTX_DAG_RUN_ID='manual__2025-09-16T10:41:57.514900+00:00'
[2025-09-16T10:41:59.804+0000] {logging_mixin.py:188} INFO - Error: syntax error at or near "<"
LINE 1:  <SQL ด้านบน> 
         ^
[2025-09-16T10:41:59.805+0000] {taskinstance.py:2698} ERROR - Task failed with exception
Traceback (most recent call last):
  File "/home/airflow/.local/lib/python3.8/site-packages/airflow/models/taskinstance.py", line 433, in _execute_task
    result = execute_callable(context=context, **execute_callable_kwargs)
  File "/home/airflow/.local/lib/python3.8/site-packages/airflow/operators/python.py", line 199, in execute
    return_value = self.execute_callable()
  File "/home/airflow/.local/lib/python3.8/site-packages/airflow/operators/python.py", line 216, in execute_callable
    return self.python_callable(*self.op_args, **self.op_kwargs)
  File "/opt/airflow/dags/sql_flow.py", line 22, in create_test_production_summary
    cursor.execute(create_view_query)
psycopg2.errors.SyntaxError: syntax error at or near "<"
LINE 1:  <SQL ด้านบน> 
         ^

[2025-09-16T10:41:59.815+0000] {taskinstance.py:1138} INFO - Marking task as FAILED. dag_id=dag1_test_production_summary, task_id=create_test_production_summary, execution_date=20250916T104157, start_date=20250916T104159, end_date=20250916T104159
[2025-09-16T10:41:59.826+0000] {standard_task_runner.py:107} ERROR - Failed to execute job 4 for task create_test_production_summary (syntax error at or near "<"
LINE 1:  <SQL ด้านบน> 
         ^
; 80)
[2025-09-16T10:41:59.836+0000] {local_task_job_runner.py:234} INFO - Task exited with return code 1
[2025-09-16T10:41:59.847+0000] {taskinstance.py:3280} INFO - 0 downstream tasks scheduled from follow-on schedule check
